2010-03-20  Stas Boukarev  <stassats@gmail.com>

	* slime-c-p-c.el, slime-fuzzy.el: Don't define keys on slime-repl-mode-map
	if slime-repl isn't loaded.
	* slime-presentations.el: Refuse to load if slime-repl isn't loaded.
	Reported by Robert Goldman.

2010-03-13  Stas Boukarev  <stassats@gmail.com>

	* slime-asdf.el: use slime-from-lisp-filename so that slime-tramp can work.
	Reported by Peter Stirling.

2010-03-12  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (extract-local-op-arglists (eql 'labels)):
	Fix (labels ((name |))).

2010-03-09  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (arglist-ref): Don't error if a &key name isn't
	a :keyword symbol. And also handle non-:keyword keyword parameters.

2010-03-09  Stas Boukarev  <stassats@gmail.com>

	* swank-presentations.lisp (inspect-presentation): Throw an error when
	trying to access unrecorded object.
	(lookup-presented-object-or-lose): Rename from `get-repl-result'.

2010-03-09  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-call-defun): When on defclass insert
	 (make-instance 'name).

2010-03-08  Stas Boukarev  <stassats@gmail.com>

	* swank-fancy-inspector.lisp (all-slots-for-inspector): Sort class
	names when grouping by inheritance the same way as slots are sorted.

2010-03-08  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-call-defun): Work also on defvar/defparameter.

2010-03-07  Stas Boukarev  <stassats@gmail.com>

	* swank-fancy-inspector.lisp (stable-sort-by-inheritance): Remove
	copy-seq, unnecessarily put in the previous commit.

2010-03-07  Stas Boukarev  <stassats@gmail.com>

	* swank-fancy-inspector.lisp: Add buttons
	for selecting default sorting order and default grouping method of
	slots of a class.

	(all-slots-for-inspector): Implement the above feature.
	Move the default method from :method option of the GF to a separate
	defmethod, this method is quite large and :method eats space for
	indentation.